tests/cases/errors/invalid-syntax/unclosed-block-comment/input.sym
{ :name Alice
/* This is a comment
, :age 28
}
